Completed prep-html-syntax exercise

--- a/prep-html-syntax/index.html
+++ b/prep-html-syntax/index.html
@@ -5,9 +5,10 @@
 </head>
     <body>
 
-      <h1 style="color:red;">My favorite Start Wars character is NONE!</h1>
+      <h1 style="color:red;">I don't have a favorite Star Wars movie!</h1>
 
-      <img src="https://i.pinimg.com/originals/c0/91/9c/c0919cc874cac0542459765e633f8491.jpg" alt="NEVER HAVE NEVER WILL">
+      <img src="https://i.pinimg.com/originals/c0/91/9c/c0919cc874cac0542459765e633f8491.jpg"
+      alt="NEVER HAVE NEVER WILL">
       <p style="color:violet;">
         I've never seen a complete Star Wars movie
       </p>
